Bug 517044 - Grouping widget does not appear immediately after undoing deletion from edit mode
Summary: Grouping widget does not appear immediately after undoing deletion from edit ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Grouping widget (other bugs)
Version First Reported In: 6.6.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-03 16:24 UTC by Tobias Fella
Modified: 2026-06-04 15:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2026-03-03 16:24:24 UTC
SUMMARY


STEPS TO REPRODUCE
1. Add grouping widget
2. go to edit mode
3. delete widget (important to delete from edit mode and not from context menu!)
4. click undo in the notification

OBSERVED RESULT
Widget does not show up again; after restarting the shell, it appears again

EXPECTED RESULT
widget shows up again

SOFTWARE/OS VERSIONS
KDE Plasma Version: git master
KDE Frameworks Version: git master
Qt Version: git master
Comment 1 TraceyC 2026-03-03 21:26:03 UTC
I can reproduce
KDE Plasma Version: git master (6.6.80)
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Comment 2 Bug Janitor Service 2026-06-01 15:11:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1507
Comment 3 Tobias Fella 2026-06-01 15:54:04 UTC
Git commit cce426f18e21b046d39d0a901240c9678ab50f9d by Tobias Fella, on behalf of Tobias Fella.
Committed on 01/06/2026 at 15:48.
Pushed by tfella into branch 'master'.

Ensure that grouping applet is visible after removing and restoring it

In order for the containment to handle removal and restoring correctly, it's important that the same signals as for a normal (non-containment) applet are emitted.
We must be careful not to emit them for other containments (e.g., the panel) though, as this causes other problems.

M  +2    -2    src/plasma/private/applet_p.cpp

https://invent.kde.org/plasma/libplasma/-/commit/cce426f18e21b046d39d0a901240c9678ab50f9d