Ensure that grouping applet is visible after removing and restoring it

In order for the containment to handle removal and restoring correctly, it's important that the same signals as for a normal (non-containment) applet are emitted.
We must be careful not to emit them for other containments (e.g., the panel) though, as this causes other problems.

BUG: 517044
(cherry picked from commit cce426f18e21b046d39d0a901240c9678ab50f9d)